plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.rivers'
version = '0.0.1-SNAPSHOT'
description = 'user-server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://maven.aliyun.com/repository/public' }
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
}

ext {
    set('springCloudVersion', "2025.1.2")
}

dependencies {
    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation ('io.github.riversking:rivers-core:1.0.23')
    annotationProcessor 'org.projectlombok:lombok'
    implementation files('../protos/userservice_protos.jar')
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

configurations {
    implementation.exclude module: 'spring-boot-starter-web'
}


dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
